# EdgeMind

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE_VERIFICATION.md  Dockerfile  README.md  SETUP_CLAUDE.md  STRANDS_IMPLEMENTATION_STATUS.md  agent_core_diagram.py  agent_core_proper_diagram.py  app.py  config.py  demo_metrics.py  mec_diagram.py  mec_mcp_diagram.py  package.json  pyproject.toml  requirements.txt  test_aws_diagram.py
.kiro/settings/: mcp.json
.kiro/specs/mec-inference-routing/: design.md  requirements.md  tasks.md
architecture/: architecture_decision_records.md  aws_architecture_diagram.py  code_review_strands_implementation.md  component_interaction_diagrams.md  data_flow_and_deployment_diagrams.md  enterprise_aws_deployment.md  high_level_architecture.md  mec_orchestration_architecture.md  strands_swarm_coordination.md  technical_debt_analysis.md
cdk/lambda/: Dockerfile  app.py  requirements.txt
demo_data/: config.json
demo_data/exports/: metrics_export_all_sites_20251014_190516.csv  metrics_export_all_sites_20251014_190516.json
demo_data/metrics/: current_metrics.json  metrics_history.json
demo_data/sessions/: session_state.json
docs/: ARCHITECTURE_GUIDE.md  AWS_COST_ANALYSIS.md  BUSINESS_CASES.md  DEMO_SCENARIOS.md  IMPLEMENTATION_PLAN.md  TECHNICAL_ARCHITECTURE.md
generated-diagrams/: mec_orchestration_architecture.mmd  strands_swarm_coordination.mmd  threshold_breach_sequence.mmd
infrastructure/: __init__.py  mec_routing_stack.py
notebooks/: strands_swarm_testing.ipynb  strands_swarm_testing_claude.ipynb
src/: __init__.py  logging_config.py  main.py
src/agents/: __init__.py  cache_manager_agent.py  decision_coordinator_agent.py  load_balancer_agent.py  orchestrator_agent.py  resource_monitor_agent.py
src/aws/: __init__.py
src/dashboard/: __init__.py  mcp_dashboard_bridge.py  mec_dashboard.py
src/data/: __init__.py  data_store.py  metrics_generator.py
src/device/: __init__.py  edge_interface.py
src/mcp_tools/: __init__.py  container_ops.py  inference_engine.py  mcp_integration.py  memory_sync.py  metrics_monitor.py  telemetry_logger.py
src/orchestrator/: __init__.py  mec_orchestrator.py  threshold_monitor.py
src/swarm/: __init__.py  swarm_coordinator.py
test_data/: config.json
test_data/exports/: metrics_export_MEC_A_20251014_190401.json  metrics_export_all_sites_20251014_190401.csv
test_data/metrics/: current_metrics.json  metrics_history.json
test_data/sessions/: session_state.json
tests/: __init__.py  run_all_tests.py  test_agent_failure_recovery.py  test_agents_unit.py  test_claude_strands.py  test_coverage_config.py  test_mcp_tools_mock.py  test_minimal_swarm.py  test_performance_orchestration.py  test_strands_swarm.py  test_swarm_integration.py  test_swarm_integration_comprehensive.py  update_agents_claude.py
